# data-catalogue

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
actions/: glossary_edits.yaml
crawler/: go.mod  main.go  readme.md
datahub_metrics/: README.md  datahub_metrics.ipynb  metadata_metric_charts.ipynb  requirements.txt
helm_deploy/: datahub-gc.yaml  retention.yaml  secrets.yaml  slack_secrets.yaml  values-base.yaml  values_prerequisites-base.yaml
ingestion/: README.md  assign_cadet_databases.yml  cadet.yaml  cadet_digital_prison_reporting.yaml  cadet_display_in_catalogue_tagger.py  cadet_electronic_monitoring.yaml  cadet_run_results.py  cadet_transformer.py  config.py  create_cadet_databases.yaml  create_custom_ownership_types.yaml  create_custom_platforms.yaml  create_derived_table_databases.yaml  create_derived_table_domains.yaml  custom_test.yaml  custom_transformer.py  datahub-cleanup.yaml  dbt_manifest_utils.py  delete_excluded_entities.py  glue_common_platform.yaml  glue_contracts.yaml  glue_courts_criminal.yaml  glue_courts_family.yaml  glue_dlpes.yaml  glue_dlpes_dfe.yaml  glue_dlpes_dwp_hmrc_main.yaml  glue_dlpes_dwp_mini.yaml  glue_dlpes_hmrc_mini.yaml  glue_fines.yaml  glue_just_link.yaml  glue_just_link.yml  glue_sop.yaml  glue_xhibit_preprocessed.yaml  ingest_tags.yaml  ingestion_utils.py  justice_data_ingest.yaml  moj_publications.yaml  post_ingestion_checks.py  postgres.yaml  postgres_hmpps_calculate_release_dates.yaml  (+2 more)
locust/: locustfile_datahub.py  locustfile_find_moj_data.py  readme.md
scripts/: filter_advisories.py  k8s-rds-secrets-to-github-secrets.sh  remove_soft_deleted_entities.py
tests/: api_client_test.py  conftest.py  test_add_latest_file_timestamp_transformer.py  test_assign_cadet_databases.py  test_assign_cadet_domains.py  test_assign_glue_databases.py  test_cadet_dbt_source.py  test_cadet_transformer.py  test_create_cadet_domains.py  test_create_derived_table_domains.py  test_dbt_manifest_utils.py  test_enrich_container_transformer.py  (+8 more)
(+119 files in other folders)
