[tool.poetry]
name = "data-catalogue-ingestion"
version = "0.1.0"
description = "Ingestion environment for data catalogue data sources"
authors = ["Murdo Moyse <murdo.moyse@digital.justice.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.5"
boto3 = "^1.34.162"
datahub = "^0.999.1"
moto = "^5.0.28"
acryl-datahub = {version = "1.0.0", extras = ["dbt", "glue", "postgres"]}
pandas = "^2.2.3"
semantic-version = "^2.10.0"
botocore = "^1.37.33"

[tool.poetry.group.dev.dependencies]
vcrpy = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
